--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
     "react-player": "^2.11.0",
+    "react-query": "^3.39.2",
     "react-quilljs": "^1.2.17",
     "react-use": "^17.4.0",
     "rsuite": "^5.19.0",
