--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookstate/core": "^4.0.0-rc21",
     "@tanstack/react-query": "^4.5.0",
     "@types/bn.js": "^5.1.1",
+    "@zeit/next-css": "^1.0.1",
     "bn.js": "^5.2.1",
     "chakra-react-select": "^4.2.2",
     "date-fns": "^2.29.3",
@@ -32,7 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.7.1",
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-quilljs": "^1.2.17",
@@ -47,10 +48,13 @@
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.38.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "8.5.0",
+    "postcss-loader": "^7.0.2",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.3"
   }
 }
