fix (profile screen) : fix some bug and change the style

--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.4",
     "@hookstate/core": "^4.0.0-rc21",
+    "@material-tailwind/react": "^1.2.4",
+    "@mui/material": "^5.10.16",
     "@tanstack/react-query": "^4.5.0",
     "@types/bn.js": "^5.1.1",
     "@zeit/next-css": "^1.0.1",
     "bn.js": "^5.2.1",
     "chakra-react-select": "^4.2.2",
     "date-fns": "^2.29.3",
+    "flowbite": "^1.5.4",
+    "flowbite-react": "^0.3.6",
     "framer-motion": "^6",
     "moment": "^2.29.4",
     "near-api-js": "^1.0.0",
@@ -37,6 +42,7 @@
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-quilljs": "^1.2.17",
+    "react-tabs": "^6.0.0",
     "react-use": "^17.4.0",
     "rsuite": "^5.19.0",
     "timeago-react": "^3.0.5"
