--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-quilljs": "^1.2.17",
+    "react-textarea-autosize": "^8.4.0",
     "react-use": "^17.4.0",
     "rsuite": "^5.19.0",
     "timeago-react": "^3.0.5"
