--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chakra-react-select": "^4.2.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^6",
+    "ipfs-http-client": "^59.0.0",
     "moment": "^2.29.4",
     "near-api-js": "^1.0.0",
     "next": "12.3.1",
