--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.10.16",
     "@tanstack/react-query": "^4.5.0",
     "@types/bn.js": "^5.1.1",
+    "axios": "^1.2.2",
     "bn.js": "^5.2.1",
     "chakra-react-select": "^4.2.2",
     "date-fns": "^2.29.3",
